--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,9 +10,35 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bluesky.localhost.justforview.MainActivity">
+    <com.bluesky.localhost.justforview.newview.floatingmenu
+        android:layout_width="match_parent"
+        app:floatingmenulayout="line"
+        app:mainposition="RIGHT_BOTTOM"
+        android:id="@+id/floatingmenu"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        <com.bluesky.localhost.justforview.newview.SubButton
+            android:layout_width="wrap_content"
+            app:subbuttonsize="50dp"
+            app:subbuttonIron="@mipmap/ic_get_app_white_48dp"
+            android:layout_height="wrap_content" />
+        <com.bluesky.localhost.justforview.newview.SubButton
+            android:layout_width="wrap_content"
+            app:subbuttonsize="50dp"
+            app:subbuttonIron="@mipmap/ic_get_app_white_48dp"
+            android:layout_height="wrap_content" />
+        <com.bluesky.localhost.justforview.newview.SubButton
+            android:layout_width="wrap_content"
+            app:subbuttonsize="50dp"
+            app:subbuttonIron="@mipmap/ic_get_app_white_48dp"
+            android:layout_height="wrap_content" />
+        <com.bluesky.localhost.justforview.newview.SubButton
+            android:layout_width="wrap_content"
+            app:subbuttonsize="50dp"
+            app:subbuttonIron="@mipmap/ic_send_white_48dp"
+            android:layout_height="wrap_content" />
+    </com.bluesky.localhost.justforview.newview.floatingmenu>
+
 </RelativeLayout>
